@@ -3,7 +3,7 @@
 use strict;
 $^W = 1;
 
-use Test::More tests => 546;
+use Test::More tests => 1015;
 
 BEGIN {
     require_ok "Text::CSV_XS";
@@ -168,8 +168,12 @@ ok (1, "EOL undef");
     }
 $/ = $def_rs;
 
-foreach my $eol ("!", "!!", "!\n", "!\n!") {
+foreach my $eol ("!", "!!", "!\n", "!\n!", "!!!!!!!!", "!!!!!!!!!!",
+		 "\n!!!!!\n!!!!!", "!!!!!\n!!!!!\n", "%^+_\n\0!X**",
+		 "\r\n", "\r") {
     (my $s_eol = $eol) =~ s/\n/\\n/g;
+    $s_eol =~ s/\r/\\r/g;
+    $s_eol =~ s/\0/\\0/g;
     ok (1, "EOL $s_eol");
     ok (my $csv = Text::CSV_XS->new ({ eol => $eol }), "new csv with eol => $s_eol");
     open  FH, ">_eol.csv";
@@ -183,10 +187,10 @@ foreach my $eol ("!", "!!", "!\n", "!\n!") {
 	ok (1, "with RS $s_rs");
 	open FH, "<_eol.csv";
 	ok (my $row = $csv->getline (*FH),	"getline 1");
-	is (scalar @$row, 3,			"# fields");
+	is (scalar @$row, 3,			"field count");
 	is_deeply ($row, [ 1, 2, 3],		"fields 1");
 	ok (   $row = $csv->getline (*FH),	"getline 2");
-	is (scalar @$row, 3,			"# fields");
+	is (scalar @$row, 3,			"field count");
 	is_deeply ($row, [ 4, 5, 6],		"fields 2");
 	close FH;
 	}
